k8s/lux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: status
  labels:
    app: status
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: ingress
  tls:
    - hosts:
        - status.lux.network
      secretName: status-lux-network-tls
  rules:
    - host: status.lux.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: status
                port:
                  number: 80
